[package]
name = "sbs_strategy"
authors = ["German Ray gerlvndv@gmail.com"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7.0"
bevy-inspector-egui = "0.11.0"
rand = "*"
ron = "0.7.1"
serde = "1.0.137"